# workspace

./: .gitignore  LICENSE  README.md  challenge2_sample_notebook.ipynb  comprehensive_school_risk.py  config_and_util_functions.py  fixed_school_risk_mapper.py  getting_started.md  getting_started.py  healthcare_school_distance.py  hotosm_ken_education_facilities_polygons_geojson.geojson  hotosm_tjk_education_facilities_points_geojson.geojson  hotosm_tjk_education_facilities_polygons_geojson.geojson  hotosm_tjk_education_facilities_polygons_gpkg.gpkg  hotosm_tjk_education_facilities_polygons_kml.kml  hotosm_tjk_education_facilities_polygons_shp.dbf  pyproject.toml  requirements.txt  school_risk_mapper.py  tajikistan.csv  tajikistan.geojson  tajikistan_hxl.csv  tajikistan_hxl.geojson  tajikistan_interactive_risk_map.html  tajikistan_school_risk_analysis_20250617_131257.csv  tajikistan_school_risk_analysis_20250617_131257.geojson  tajikistan_school_risk_analysis_20250617_131257.xlsx  tajikistan_school_risk_analysis_20250617_131257_report.txt
distance_analysis/: distance_analysis_summary.json  school_healthcare_distances.csv
tajikstan/: tajikistan_school_risk_analysis_20250617_131257_summary.json
