[project]
name = "un-tech-over"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
